# cppp

./: .gitignore  CMakeLists.txt  CMakeLists_main.txt  LICENSE  README.md  README_serv.md  math_lib.def
include/: math_lib.h
src/: main.cpp  math_lib.cpp
